backend/mypy.txt
app/database.py:17: error: No overload variant of "sessionmaker" matches
argument types "AsyncEngine", "type[AsyncSession]", "bool"  [call-overload]
    AsyncSessionLocal = sessionmaker(
                        ^
app/database.py:17: note: Possible overload variants:
app/database.py:17: note:     def [_S: Session] sessionmaker(self, bind: Engine | Connection | None = ..., *, class_: type[_S], autoflush: bool = ..., expire_on_commit: bool = ..., info: dict[Any, Any] | None = ..., **kw: Any) -> sessionmaker[_S]
app/database.py:17: note:     def [_S: Session] sessionmaker(self, bind: Engine | Connection | None = ..., *, autoflush: bool = ..., expire_on_commit: bool = ..., info: dict[Any, Any] | None = ..., **kw: Any) -> sessionmaker[Session]
Found 1 error in 1 file (checked 39 source files)
